Updated CORS config
Co-authored-by: Copilot <copilot@github.com>